# absorb

./: .darglint  .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codecov.yml  drafter.yml  release.yml  test-pypi.yml  tests.yml
absorb/: __init__.py  main.py
absorb/config/: paths.py
absorb/core/idea/: commands.py
absorb/core/kanban/: commands.py
absorb/core/tasks/: commands.py
absorb/utils/: idea_utils.py  kanban_utils.py  log_utils.py  tasks_utils.py
docs/: conf.py  index.rst  reference.rst  requirements.txt
tests/: test_cli.py  test_idea.py  test_kanban.py  test_tasks.py  to-add.md
tests/files/: card-info.md  idea_description.txt
